# dspy-lm-AMO

./: CHANGELOG.md  README.md  pyproject.toml
datasets/: README.md  afso_requirements_gepa_v1.jsonl
examples/: gepa_smoke_test.py
output/gepa_smoke/: gepa_smoke_report.json  optimized_instructions.txt
output/gepa_smoke/logs/generated_best_outputs_valset/task_0/: iter_0_prog_0.json
output/gepa_smoke/logs/generated_best_outputs_valset/task_1/: iter_0_prog_0.json
output/gepa_smoke/logs/generated_best_outputs_valset/task_2/: iter_0_prog_0.json
output/gepa_smoke/logs/generated_best_outputs_valset/task_3/: iter_0_prog_0.json
output/gepa_smoke/logs/generated_best_outputs_valset/task_4/: iter_0_prog_0.json
output/gepa_smoke/logs/generated_best_outputs_valset/task_5/: iter_0_prog_0.json
output/gepa_smoke/logs/generated_best_outputs_valset/task_6/: iter_0_prog_0.json
output/gepa_smoke/logs/generated_best_outputs_valset/task_7/: iter_0_prog_0.json
output/gepa_smoke/logs/generated_best_outputs_valset/task_8/: iter_0_prog_0.json
